objects/ASI_CRM_ConsumedSubBrand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Consumer__c</fullName>
        <label>Consumer</label>
        <referenceTo>ASI_CRM_Consumer__c</referenceTo>
        <relationshipLabel>Consumed Sub-Brands</relationshipLabel>
        <relationshipName>ASI_CRM_ConsumedSubBrands_Consumer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>ASI_CRM_ConsumedSub_Consumer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WeeklyConsumption__c</fullName>
        <label>Weekly Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Consumed Sub-Brand</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Consumed Sub-Brand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumed Sub-Brands</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_ConsumedSubBrand</fullName>
        <active>true</active>
        <label>VN Consumed Sub-Brand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>